lib/tests/ui/client_without_base_url.stderr
error: struct needs to have either a field named `base_url` or one tagged with `#[jsonrpc_client(base_url)]`
  --> $DIR/client_without_base_url.rs:42:19
   |
42 |   pub struct Client {
   |  ___________________^
43 | |     inner: InnerClient,
44 | | }
   | |_^
